	47. Added a request to interrupt motion planning process in ChppciProblem.

hpp-corbaserver 1.4 released June 12, 2008
	
	46. In ChppciProblem::setDistanceFunction, distance function is passed to 
	    device, roadmap builder if any and path optimizer if any.

	45. Added request ChppciObstacle::loadModelLoaderObstacle to load
	obstacle through modelloader. 

	44. Slight modifications in ChppciProblem::setPathOptimizer.

	43. Added CORBA request to select diffusion from start or goal of both.

	42. Added CORBA request to set diffusion shooter of a given problem.

	41. Removed ChppciServer::getInstance() since there is no strong reason
	    to impose to this object to be a singleton.

	40. Added explicit dependence to kwsPlus for documentation.

	39. Added CORBA request to set diffusion node picker of a given problem.
	
	38. ChppciOpenHrpClient::loadHrp2Model() now takes a shared pointer to
	    a humanoid robot.
	
hpp-corbaserver 1.3 released May 13, 2008.

	37. idl interfaces are now wrapped into module hppCorbaServer. 

	36. Changed the names of the Corba context and servants. Name of context is now
	    hpp.plannerContext
	    Names of servants are
	    ChppciRobot: robots.servant
	    ChppciObstacle: obstacles.servant
	    ChppciProblem: problems.servant
	
	35. Added requests in ChppciObstacleServer to control obstacles 
	    transparency and visibility.

	34. Changed the way dof bounds are handled at creation of a joint.

	33. Added boolean parameter in ChppciProblem::setRoadmapbuilder to select whether 
	    roadmap developed by new roadmap builder should be displayed.
	
	32. in ChppciServer objects, new distance function factories can be added.

	31. Added a CORBA request to set a distance function in a given roadmap builder.
	
	30. Added a standalone CORBA server running without the interface.
	
	29. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
	

	28. Adaptation to KPP version 2.04.500.
	