@@ -1,3 +1,5 @@
+2008/06/20
+	48. Added request hppciRobot::setDofBounds.
 	47. Added a request to interrupt motion planning process in ChppciProblem.
 
 hpp-corbaserver 1.4 released June 12, 2008
